--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
   <div id="app"></div>
+  <script
+    src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.0.0/dist/fetch.umd.min.js"
+    type="text/javascript"
+  ></script>
 </body>
 </html>
