--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,9 @@
     src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.0.0/dist/fetch.umd.min.js"
     type="text/javascript"
   ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/rxjs@6.5.3/bundles/rxjs.umd.min.js"
+    type="text/javascript"
+  ></script>
 </body>
 </html>
